Chip fix for nowrap

--- a/sass/materialize/components/_chips.scss
+++ b/sass/materialize/components/_chips.scss
@@ -5,6 +5,7 @@
     color: #fff;
   }
 
+  white-space: nowrap;
   display: flex;
   height: 32px;
   font-size: 13px;
